Revision history for Perl extension Finance-Robinhood

{{$NEXT}}

    - Support for initiating and completing a password reset request
    - Loads of user information methods
    - Require IO::Socket::SSL and perl 5.12+

0.01 2016-03-26T23:35:04Z

    - First public release
    - This is an alpha dist. The API will be subject to change!